[package]
name = "reduplicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.4", package = "gtk4", features = ["v4_8"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-async-std-native-tls"] }

[build-dependencies]
glib-build-tools = "0.17.0"
